--- a/HTML/javascript.html
+++ b/HTML/javascript.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning javascript</title>
-    <script src="../JS/myScript.js"></script>
+    <!-- <script src="../JS/myScript.js"></script> -->
 </head>
 
 <body>
-    <h1>Welcome to my test html page.</h1>
-    <h2>Designed for testing javascript</h2>
+    <!-- <h1>Welcome to my test html page.</h1>
+    <h2>Designed for testing javascript</h2> -->
 
+    <h1>SPY_Assignment</h1>
+    <script src="../JS/spy_assignment.js"></script>
 </body>
 
 </html>
